--- a/index.html
+++ b/index.html
@@ -39,15 +39,55 @@
         </nav>
     </div>
     </header>
-    <section>
-        Main Image
+    <section id="main-image">
+        <div class="container-fluid conteiner-main">
+            <div class="row">
+                <div class="col-md-6 about-image personal-info center">
+                    <h1>Hello, I'm Mighty Matcha</h1>
+                    <h2>Homemade ice cream</h2>
+                </div> 
+                <div class="col-md-6 about-image right-image">
+                    <img  src="assets/images/Ice_Cream_Cone_PNG_Transparent_Clip_Art_Image1.png" class="img-fluid" alt="Iva Jelavic">
+                </div>
+            </div>
+        </div>
     </section>
-    <section>
+    <section id="adress">
+        <div class="marko">
+            <p>bhggjhggjhv</p>
+        </div>
         Address and working hours
     </section>
 
     <footer>
-        social links
+        <footer class="container-fluid">
+            <div id="footer-details" class="row justify-content-center no-gutters">
+                <div class="col">
+                    <p class=" general-sub">Check out my social pages</p>
+                    <ul class="inline-block social-links">
+                        <li class="list-inline-item ml-3">
+                            <a target="_blank" href="https://www.facebook.com/">
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                                <span class="sr-only">Facebook</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item ml-3">
+                            <a target="_blank" href="https://www.twitter.com/">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                                <span class="sr-only">Twitter</span>
+                            </a>
+                        </li>
+                        <li class="list-inline-item ml-3">
+                            <a target="_blank" href="https://www.instagram.com/">
+                                <i class="fa fa-instagram" aria-hidden="true"></i>
+                                <span class="sr-only">Instagram</span>
+                            </a>
+                        </li>
+                    </ul>
+                     <p class="copyright general-sub">Copyright 2024 © Marko Jelavic</p>
+                </div>
+            </div>
+        </footer>
     </footer>
 
     <!-- Bootstrap v5.0 bundle -->
